@@ -2,6 +2,8 @@ hildon-home (0.3.14~unreleased) unstable; urgency=low
 
   * Trivial code improvements. Fixes: NB#102470
   * Fix Small leak in hd-system-notifications.c. Fixes: NB#102456
+  * On incoming events request mce to turn display backlight on. Fixes:
+    NB#100745
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 23 Feb 2009 13:54:16 +0200
 
